1006_수업(객체지향)
1006_수업

--- a/1006Exam/.project
+++ b/1006Exam/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>1006Triangle</name>
+	<name>1006Exam</name>
 	<comment></comment>
 	<projects>
 	</projects>
