--- a/jsp_project/OpenProject/WebContent/WEB-INF/web.xml
+++ b/jsp_project/OpenProject/WebContent/WEB-INF/web.xml
@@ -2,11 +2,16 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>OpenProject</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>index.html</welcome-file>   
+    <welcome-file>index.jsp</welcome-file>   
   </welcome-file-list>
+  
+  <!-- 서블릿 등록 -> 등록 시에는 서블릿 이름과 서블릿 클래스가 필요함. --> 
+	<servlet>
+		<servlet-name>Loader</servlet-name>
+		<servlet-class>jdbc.Loader</servlet-class>
+		<load-on-startup>1</load-on-startup>	<!-- 몇 번 실행할껀지 -->
+	</servlet>  
+  
+  
 </web-app>
