--- a/jsp_project/FirstWeb/WebContent/WEB-INF/web.xml
+++ b/jsp_project/FirstWeb/WebContent/WEB-INF/web.xml
@@ -41,5 +41,27 @@
   	<location>/error/errorType.jsp</location>
   </error-page>
   
+  <!-- 필터 등록 -->
+  <filter>
+  	<filter-name>LoginCheckFilter</filter-name>
+  	<filter-class>filter.LoginCheckFilter</filter-class>
+  </filter>
+  <filter-mapping>  
+  	<filter-name>LoginCheckFilter</filter-name>
+  	<url-pattern>/dept/*</url-pattern>
+  </filter-mapping>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   
 </web-app>
