--- a/jsp_project/OpenProject/WebContent/WEB-INF/web.xml
+++ b/jsp_project/OpenProject/WebContent/WEB-INF/web.xml
@@ -13,5 +13,14 @@
 		<load-on-startup>1</load-on-startup>	<!-- 몇 번 실행할껀지 -->
 	</servlet>  
   
+  <!-- 필터 등록 -->
+  <filter>
+  	<filter-name>LoginCheck</filter-name>
+  	<filter-class>filter.LoginCheckFilter</filter-class>  	
+  </filter>
   
+  <filter-mapping>
+  	<filter-name>LoginCheck</filter-name>
+  	<url-pattern>/member/mypage/*</url-pattern>
+  </filter-mapping>
 </web-app>
