--- a/jsp_project/OpenProject/WebContent/WEB-INF/web.xml
+++ b/jsp_project/OpenProject/WebContent/WEB-INF/web.xml
@@ -10,6 +10,11 @@
 	<servlet>
 		<servlet-name>Loader</servlet-name>
 		<servlet-class>jdbc.Loader</servlet-class>
+		<init-param>
+		<param-name>driver</param-name>
+		<param-value>com.mysql.cj.jdbc.Driver</param-value>
+		</init-param>
+		
 		<load-on-startup>1</load-on-startup>	<!-- 몇 번 실행할껀지 -->
 	</servlet>  
   
@@ -23,4 +28,25 @@
   	<filter-name>LoginCheck</filter-name>
   	<url-pattern>/member/mypage/*</url-pattern>
   </filter-mapping>
+  
+  <!-- 필터 등록2 -->
+  <filter>
+  	<filter-name>encodingFilter</filter-name>
+  	<filter-class>filter.CharacterEncodingFilter</filter-class>
+  	<init-param>
+  		<param-name>encoding</param-name>
+  		<param-value>utf-8</param-value>
+  	</init-param>
+  </filter>
+  
+  
+  
+  
+  
+  
+  
+  
+  
 </web-app>
+
+	
