--- a/jsp_project/OpenProject/WebContent/WEB-INF/web.xml
+++ b/jsp_project/OpenProject/WebContent/WEB-INF/web.xml
@@ -39,8 +39,16 @@
   	</init-param>
   </filter>
   
+  <!-- 컨텍스트 파라미터 등록 -->
+  <context-param>
+  	<param-name>jdbcDriver</param-name>
+  	<param-value>com.mysql.cj.jdbc.Driver</param-value>
   
+  </context-param>
   
+  <listener>
+  	<listener-class>listener.DBCPInitListener</listener-class>
+  </listener>  
   
   
   
