--- a/jsp_project/MVCTest/WebContent/WEB-INF/web.xml
+++ b/jsp_project/MVCTest/WebContent/WEB-INF/web.xml
@@ -23,4 +23,9 @@
   	<servlet-class>mvc.controller.FrontController</servlet-class>
   </servlet>
   
+  <servlet-mapping>
+  	<servlet-name>FrontController</servlet-name>
+  	<url-pattern>/</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
