--- a/jsp_project/OpenProjectMVC/WebContent/WEB-INF/web.xml
+++ b/jsp_project/OpenProjectMVC/WebContent/WEB-INF/web.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  
-  <display-name>MVCTest</display-name>
+  <display-name>OpenProjectMVC</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  <!-- 2. SimpleController Servlet 등록 -->
+  
+  <!-- 데이터베이스 드라이버 로드 서블릿 등록 -->
   <servlet>
-  	<servlet-name>SimpleController</servlet-name>
-  	<servlet-class>mvc.controller.SimpleController</servlet-class>
+  	<servlet-name>Loader</servlet-name>
+  	<servlet-class>jdbc.Loader</servlet-class> 
+  	<load-on-startup>1</load-on-startup>
   </servlet>
   
-  <!-- <servlet-mapping>
-  	<servlet-name>SimpleController</servlet-name>
-  	<url-pattern>/simple</url-pattern>
-  </servlet-mapping> -->
-  
-  <!-- 5. FrontController Servlet 등록 -->
+  <!-- FrontController 서블릿 등록 -->
   <servlet>
   	<servlet-name>FrontController</servlet-name>
   	<servlet-class>mvc.controller.FrontController</servlet-class>
   	<init-param>
   		<param-name>configPath</param-name>
   		<param-value>/WEB-INF/command.propertise</param-value>
+  		
   	</init-param>
-  	<!-- 21. -->
   	<load-on-startup>1</load-on-startup>
   </servlet>
   
   <servlet-mapping>
   	<servlet-name>FrontController</servlet-name>
-  	<url-pattern>/</url-pattern>
+  	<url-pattern>*.do</url-pattern>
   </servlet-mapping>
+  
+  <!-- 인코등 설정 필터 등록 -->
+  <filter>
+  	<filter-name>CharacterEncodingFilter</filter-name>
+  	<filter-class>filter.CharacterEncodingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>CharacterEncodingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   
 </web-app>
