--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse
 
 ### Eclipse ###
+target/
+.settings/
+servers/
+server/
 .metadata
 bin/
 tmp/
